Fixed playlist input box alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,7 +22,7 @@ input {
 }
 
 
-h4 {
+h2, h4 {
   text-align: center;
 }
 
@@ -39,9 +39,16 @@ h4 {
 .result {
   width: 200px;
   padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
 .resultsList {
   display: flex;
   overflow: auto;
+}
+
+#logoutButton {
+  float: right;
 }
